# repro_bazel_nvml_cgo

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum  nvml_test.go
