module(
    name = "repro_bazel_nvml_cgo",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "rules_go", version = "0.52.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.2")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_uuid", "com_github_nvidia_go_nvml", "com_github_stretchr_testify")
